fix some UI elements, implimented scrollbar design

--- a/index.css
+++ b/index.css
@@ -1,14 +1,21 @@
 html::-webkit-scrollbar {
-    width: 3vw;
-}
-
-html::-webkit-scrollbar-thumb {
-    background-color: #f5a147;
+    width: 2vw;
 }
 
 html::-webkit-scrollbar-track {
-    background-color: #9559ba;
+    background: hsl(216, 28%, 7%);
 }
+
+html::-webkit-scrollbar-thumb {
+    background: linear-gradient(hsla(277, 41%, 54%, 0.3),hsla(31, 90%, 62%, 0.3));
+    border-radius: 100vw;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(hsla(277, 41%, 54%, 1),hsla(31, 90%, 62%, 1));
+
+}
+
 
 body {
     margin: 0;
@@ -16,16 +23,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     min-width: 400px;
     width: max-content;
-    background-color: #0D1117;
+    background-color: hsl(216, 28%, 7%);
 }
 
 input {
     padding: 10px;
-    width: 400px;
+    width: 82%;
     box-sizing: border-box;
     border: 1px solid #9559ba;
     margin-bottom: 5px;
-    background-color: #161B22;
+    background-color: hsl(215, 21%, 11%);
     color:#9559ba
 }
 
@@ -51,6 +58,7 @@ ul {
     list-style: none;
     padding-left: 0;
     margin-top: 5px;
+    max-width: 400px;
 }
 
 li {
@@ -87,4 +95,22 @@ svg {
 
 #delete-icon:hover{
     fill: #e72a49
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+.input-container {
+    display: flex;
+    max-width: 400px;
+    justify-content: space-between;
+    padding: 5px;
+}
+
+.link-icon {
+    height: 40px;
+    margin-right: 30px;
 }
